--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,7 @@ dependencies:
   path_provider: ^1.6.11
 
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+# dev_dependencies:
 
 flutter:
   uses-material-design: true
